--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -6,13 +6,13 @@ body {
   line-height: 1.3;
 }
 
-#ShopifyChat {
+/* #ShopifyChat {
   position: fixed !important;
   bottom: 24px !important;
   z-index: 2147483646 !important;
   right: 16px !important;
   height: 60px !important;
-}
+} */
 
 .App {
   text-align: center;
@@ -283,9 +283,9 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type="number"] {
+/* input[type="number"] {
   -moz-appearance: textfield;
-}
+} */
 
 input[type="number"]:focus-visible {
   border: none;
@@ -740,10 +740,7 @@ p:last-child {
   .ques-1-answer span {
     font-size: 12px!important;
   }
-  .cart-btn {
-    /* flex-direction: column; */
-    /* gap: 1rem; */
-  }
+
   .cart-btn p, .custom-price{
     font-size: 18px!important;
     color:#fff;
