--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -317,12 +317,14 @@ input[type="number"]:focus-visible {
 .total-price>p {
   margin: 0;
   width: 14%;
-  
-}
-.cart-btn p{
-  color:#fff;
 
 }
+
+.cart-btn p {
+  color: #fff;
+
+}
+
 .price {
   color: black;
 }
@@ -478,7 +480,7 @@ p:last-child {
 } */
 
 .custom-cart_btn p {
-  color: #fffcfc!important;
+  color: #fffcfc !important;
   width: 100%;
 }
 
@@ -587,10 +589,10 @@ p:last-child {
   }
 }
 
-@media screen and (min-width: 750px) and (max-width: 768px){
+@media screen and (min-width: 750px) and (max-width: 768px) {
   .cart-btn {
-    width: 83.33%!important;
-}
+    width: 83.33% !important;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -682,12 +684,16 @@ p:last-child {
     margin: 0;
     width: auto;
   }
-  .cart-btn p, .custom-price {
-    font-size: 20px!important;
+
+  .cart-btn p,
+  .custom-price {
+    font-size: 20px !important;
   }
+
   .cart-btn .price {
-    color: #fff!important;
+    color: #fff !important;
   }
+
   .price {
     display: -webkit-box;
     font-size: 25px;
@@ -721,30 +727,33 @@ p:last-child {
     cursor: not-allowed;
     opacity: 0.5;
     background-color: #000;
-    /* width: 50%; */ 
+    /* width: 50%; */
   }
 
   .custom-cart_btn p {
     width: max-content;
   }
+
   .cart-btn {
     display: flex;
     align-items: center;
     padding: .5rem;
     width: 100%;
     /* gap: 70px; */
-}
+  }
 }
 
 @media screen and (max-width: 425px) {
   .ques-1-answer span {
-    font-size: 12px!important;
+    font-size: 12px !important;
   }
 
-  .cart-btn p, .custom-price{
-    font-size: 18px!important;
-    color:#fff;
+  .cart-btn p,
+  .custom-price {
+    font-size: 18px !important;
+    color: #fff;
   }
+
   .cart-btn .total-price {
     display: flex;
     /* width: 100%; */
@@ -1005,6 +1014,10 @@ p:last-child {
 
 @media screen and (max-width: 320px) {
 
+  .chat-ui {
+    height: 330px;
+  }
+
   .ques-1 h1,
   .ques-2 h1,
   .ques-3 h1,
@@ -1037,7 +1050,7 @@ p:last-child {
     gap: 4px;
     margin: 4px;
   }
- 
+
   .totalvolumeValue {
     display: flex;
     width: 100%;
@@ -1214,9 +1227,11 @@ p:last-child {
     align-items: center;
     gap: 2px;
   }
+
   .ques-1-answer span {
-    font-size: 10px!important;
+    font-size: 10px !important;
   }
+
   .totalvolumeValue {
     display: flex;
     flex-direction: row;
