--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -1192,6 +1192,14 @@ p:last-child {
     background-color: #000;
     width: max-content;
   }
+
+  .cart-btn {
+    display: flex;
+    align-items: center;
+    padding: .5rem;
+    width: 100%;
+    flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 250px) {
