--- a/solar-combo-react/src/App.css
+++ b/solar-combo-react/src/App.css
@@ -6,6 +6,13 @@ body {
   line-height: 1.3;
 }
 
+.banner-image-container {
+  position: relative;
+  left: 50%;
+  margin-left: -45vw;
+  padding: 40px 0px 10px 0px;
+}
+
 p {
   color: #69727b;
   margin: 0px;
@@ -514,60 +521,34 @@ p:last-child {
 /* ========================================================================== */
 
 /* Default desktop styles (already in your code) */
-@media screen and (max-width: 1200px) {
 
-  .ques-1-container,
-  .ques-2-container,
-  .ques-3-container,
-  .ques-4-container,
-  .ques-5-container,
-  .ques-6-container,
-  .ques-7-container,
-  .ques-8-container {
-    background-color: #f5f5f5;
-    padding: 5px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px #0000001a;
+@media screen and (min-width: 1201px) and (max-width: 1440px) {
+  .banner-image-container {
+    position: relative;
+    left: 23%;
+    margin-left: -30vw;
+    padding: 40px 0 10px;
   }
-
-  /* Adjustments for tablets */
-  .product-image img {
-    max-width: 80%;
-    margin-bottom: 20px;
-  }
-
-  .custom-wiring-form {
-    padding: 10px;
-  }
-
-  /* Adjust font size and input box for tablets */
-  .custom-wiring-input input {
-    width: 100%;
-    font-size: 18px;
-  }
-
-  .total-price {
-    display: flex;
-    align-items: center;
-    font-size: 25px;
-    font-weight: 700;
-    color: #333;
-    margin-top: 15px;
-    justify-content: flex-start;
-    gap: 5px;
 }
 
-  .total-price>p {
-    margin: 0;
-    /* width: 50%; */
-  }
-
-  .button-primary {
-    font-size: 14px;
+/* Medium desktop screens (1025px to 1200px) */
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  .banner-image-container {
+    position: relative;
+    left: 10%;
+    margin-left: -15vw;
+    padding: 40px 0 10px;
   }
 }
 
 @media screen and (max-width: 1024px) {
+
+  .banner-image-container {
+    position: relative;
+    left: 10%;
+    margin-left: -15vw;
+    padding: 40px 0 10px;
+  }
 
   .total-price {
     display: flex;
@@ -1198,8 +1179,30 @@ p:last-child {
 
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width:374px) {
 
+  .ques-1-answer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+    margin: 5px 0;
+  }
+
+  input[type=number] {
+    padding: 8px;
+    width: 80px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 17px;
+    text-align: center;
+  }
+
+}
+
+
+@media screen and (max-width: 320px) {
   .cart-btn {
     display: flex;
     justify-content: space-between;
@@ -1216,7 +1219,6 @@ p:last-child {
     margin: 0 0 0 0%;
     flex-direction: column !important;
   }
-
 
   .chat-ui {
     height: 330px;
@@ -1383,7 +1385,17 @@ p:last-child {
 
 }
 
-@media screen and (max-width: 250px) {
+
+@media screen and (min-width: 250px) and (max-width: 319px) {
+
+  input[type=number] {
+    padding: 8px;
+    width: 70px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 17px;
+    text-align: center;
+  }
 
   .ques-1 h1,
   .ques-2 h1,
